@@ -1,5 +1,20 @@
 This file records outstanding actions for the math module
 
+dd. 6 february 2020
+- Implement accelerations for infinite sums:
+  - Method described on Wolfram
+  - Method for alternating series from the book
+
+dd. 9 february
+http://numbers.computation.free.fr/Constants/Miscellaneous/seriesacceleration.html
+- provides an overview
+https://arxiv.org/pdf/math/0202009.pdf
+- also interesting
+https://www.cis.twcu.ac.jp/~osada/thesis_osada.pdf
+- thesis
+https://kconrad.math.uconn.edu/blurbs/analysis/series_acceleration.pdf
+- yet another article
+
 dd. 4 november 2019
 - Extend the set of test cases for linear interpolation with corner cases
   - these should fail with a clear error message.
