@@ -206,5 +206,34 @@ test "incBeta-2.1" "Values of the regularized incomplete Beta function (a,b = 2.
 } -result {0 0.0146427741 0.0572695646 0.125736691 0.217579513 0.329891773 0.459123651 0.600707642 0.748250184 0.891242370 1}
 
 
+#
+# Euler and Bernoulli numbers - as they come from tables, merely check that the procedures work
+#
+test "eulerBernoulli-1.0" "Euler number within range" -body {
+   set result {}
+   foreach index {0 1 2 3 4} {
+      lappend result [::math::special::eulerNumber $index]
+   }
+   set result
+} -result {1 0 -1 0 5}
+
+test "eulerBernoulli-1.1" "Euler number out of range" -body {
+   ::math::special::eulerNumber -10
+   return {}
+} -returnCodes {error} -result {Index (-10) out of range - should be between 0 and 54}
+
+test "eulerBernoulli-2.0" "Bernoulli number within range" -match numbers-accurate -body {
+   set result {}
+   foreach index {0 1 2 3 4} {
+      # Multiply by 30 to get integer values
+      lappend result [expr { 30.0 * [::math::special::bernoulliNumber $index] }]
+   }
+   set result
+} -result {30.0 -15.0 5.0 0.0 -1.0}
+
+test "eulerBernoulli-1.0" "Bernoulli number out of range" -body {
+   ::math::special::bernoulliNumber -10
+} -returnCodes {error} -result {Index (-10) out of range - should be between 0 and 52}
+
 # End of test cases
 testsuiteCleanup
